+ finalized work on documentation :raised_hands:

--- a/Documentation/lecture_examples_python.tex
+++ b/Documentation/lecture_examples_python.tex
@@ -7,11 +7,20 @@
 \usepackage{fancyvrb}
 \usepackage{a4wide}
 \usepackage{hyperref}
+\usepackage{longtable}
+\usepackage{graphicx}
+\usepackage{setspace}
 
 \begin{document}
 
 \title{Implementierung von SetlX-Programmen in Python}
 \author{Boschamnn, Johann and Palackal, Joseph}
+
+\input{deckblatt}
+
+\newpage
+\input{ehrenw_erklaerung}
+\newpage
 
 \tableofcontents
 
@@ -22,6 +31,7 @@
 \clearpage
 \addcontentsline{toc}{chapter}{Tabellenverzeichnis}
 \listoftables
+
 
 \include{einleitung}
 \include{warum_python}
