--- a/Documentation/warum_python.tex
+++ b/Documentation/warum_python.tex
@@ -15,4 +15,13 @@ von Coding Dojo\footnote{
 
 Die Online-Lernplattform Udacity verwendet für den Kurs „Intro to Computer Science“ Python als Sprache, 
 um die Themen der theoretischen Informatik zu erläutern. Diesen Online-Kurs haben bereits über 500.000 
-Personen besucht.\footnote{Stand 09.05.2016} Als Proargumente werden die Mächtigkeit, die leichte Erlernbarkeit und die weite Verbreitung aufgeführt.
+Personen besucht.\footnote{Stand 09.05.2016} Als Proargumente werden die Mächtigkeit, 
+die leichte Erlernbarkeit und die weite Verbreitung aufgeführt.
+
+Zudem kommt, dass in \textsc{SetlX} nur Java-Bibliotheken eingebunden werden können. 
+Selbst wenn eine Java-Bibliothek eingebunden wird, so muss diese direkt in der Programmiersprache 
+eingebunden werden. Es ist nicht möglich Bibliotheken in einzelne Programme einzubinden. 
+Außerdem existieren bereits einige Python-Bibliotheken, die der theoretischen Informatik Vorlesung 
+einen Mehrwert bieten würden. Beispielsweise wären die Module matplotlib, zum Plotten von Graphen, 
+sowie pandas, zur Auswertung von Daten, für Python vorhanden. Zwar kann in \textsc{SetlX} bereits 
+geplottet werden, jedoch ist der Dozent der Vorlesung mit der Implementierung der Java-Bibliothek unzufrieden. 
