+ did some of the final work on the documentation NOTE: still needs some work from @iwan933 see comments in the .tex-files

--- a/Documentation/deckblatt.tex
+++ b/Documentation/deckblatt.tex
@@ -7,7 +7,7 @@
 	%\end{longtable}
 	\enlargethispage{20mm}
 	\begin{center}
-		\raisebox{\ht\strutbox-\totalheight}{\includegraphics[height=2.5cm]{images/dhbw.png}}
+		\includegraphics[width=0.5\textwidth, height=2.5cm]{images/dhbw.png}
 		
 		\vspace*{12mm}	{\LARGE\textbf Implementierung von \textsc{SetlX}-Programmen in Python }\\
 		\vspace*{12mm}	{\large\textbf Studienarbeit Modul T3201}\\
