--- a/Documentation/literature.bib
+++ b/Documentation/literature.bib
@@ -1,20 +1,30 @@
-% This file was created with Citavi 5.0.0.11
+% This file was created with Citavi 5.3.0.5
 
-@misc{Guo14,
+@misc{codeeval.,
+ abstract = {},
+ author = {{code eval}},
+ title = {Most Popular Coding Languages of 2016},
+ note = {\url{http://blog.codeeval.com/codeevalblog/2016/2/2/most-popular-coding-languages-of-2016}},
+ urldate = {01.08.2016}
+}
+
+
+@misc{Guo.07.07.2014,
+ abstract = {Eight of the top 10 CS departments in the U.S., and {\~{}}70{\%} of the top 40, teach Python in introductory courses.},
  author = {Guo, Philip},
  year = {07.07.2014},
  title = {Python is Now the Most Popular Introductory Teaching Language at Top U.S. Universities},
- url = {http://cacm.acm.org/blogs/blog-cacm/176450-python-is-now-the-most-popular-introductory-teaching-language-at-top-us-universities/fulltext},
+ note = {\url{http://cacm.acm.org/blogs/blog-cacm/176450-python-is-now-the-most-popular-introductory-teaching-language-at-top-us-universities/fulltext}},
  urldate = {01.05.2016}
 }
 
 
-@unpublished{StroetmannHerrmann15,
+@unpublished{Stroetmann.30.07.2015,
+ abstract = {},
  author = {Stroetmann, Karl and Herrmann, Tom},
  year = {30.07.2015},
  title = {SetlX - A Tutorial: Version 2.4.0},
- address = {Mannheim, Stuttgart},
- note = {Tutorial for programming language}
+ address = {Mannheim, Stuttgart}
 }
 
 
