--- a/Documentation/nur_python.tex
+++ b/Documentation/nur_python.tex
@@ -1,11 +1,11 @@
 \chapter{Skripte ohne spezielle Module}
 
-Es ist bereits möglich einige \textsc{SetlX}-Programme ohne zusätzliche Module in Python 
+Es ist bereits möglich, einige \textsc{SetlX}-Programme ohne zusätzliche Module in Python 
 anzufertigen. Diese Python-Skripte wurden als erstes angefertigt, um feststellen zu können, ob es möglich ist 
 Python Syntax zu verwenden, ohne die Eleganz des Codes zu verlieren.
 
 Beim Schreiben von Python-Skripten muss, im Gegensatz zu \textsc{SetlX}, bei der Einrückung auf eine 
-Besonderheit geachtet werden. In Python ist es möglich sogenannte unsichtbare Fehler zu erhalten, 
+Besonderheit geachtet werden. In Python ist es möglich, sogenannte unsichtbare Fehler zu erhalten, 
 indem man eine inkonsistente Einrückung verwendet. Es ist möglich sowohl mit Leerzeichen, 
 als auch mit Tabulatoren die Einrückung zu gestalten. Was jedoch verboten ist, 
 ist die Verwendung beider Arten gleichzeitig, da Python daraufhin auf einen Fehler stößt. 
