--- a/Documentation/einleitung.tex
+++ b/Documentation/einleitung.tex
@@ -5,7 +5,7 @@ Prof. Dr. Karl Stroetmann die Programmiersprache \textsc{SetlX} ein. \textsc{Set
 basierende Sprache, die sehr gut geeignet ist, um den Pseudocode aus Vorlesungen ausführbar zu machen. 
 Diese Programmiersprache wirbt damit, dass die Verwendung von Mengen und Listen sehr gut unterstützt 
 wird. Außerdem können Ausdrücke aus der Mengenlehre, so wie andere mathematischen Ausdrücke in einer 
-Syntax, die sehr ähnlich zur mathematischen Notation ist, implementiert werden. \cite{StroetmannHerrmann15} 
+Syntax, die sehr ähnlich zur mathematischen Notation ist, implementiert werden. \cite{Stroetmann.30.07.2015} 
 Da diese Vorlesung bereits im ersten Semester stattfindet und die Studenten parallel dazu eine 
 Vorlesung aus dem Modul Mathematik I besuchen, können die Studenten Themen wie beispielsweise die 
 Mengenlehre schneller kennen lernen. Die komplementäre Auseinandersetzung mit ähnlichen bis gleichen 
@@ -13,7 +13,7 @@ Themen in beiden Vorlesungen ermöglicht das gleichzeitige Lernen für zwei Vorles
 
 Ein weiterer Vorteil für die Studenten ist, dass die Syntax von \textsc{SetlX}, zusätzlich zum sehr 
 mathematischen Stil, auch starke Ähnlichkeiten zur Programmiersprache C aufweist. Selbst für die 
-Studenten, die zuvor keinen Kontakt mit C hatten ist das ein großer Vorteil, da im ersten Semester 
+Studenten, die zuvor keinen Kontakt mit C hatten, ist das ein großer Vorteil, da im ersten Semester 
 parallel zur theoretischen Informatik Vorlesung auch eine Vorlesung mit dem Titel „Programmieren in C“ 
 besucht werden muss. So muss kein starkes Umdenken stattfinden, wenn von \textsc{SetlX} zu C und auch 
 umgekehrt gewechselt wird.
@@ -22,5 +22,6 @@ Die Hauptintention dieser Arbeit ist es, zu prüfen, ob es möglich wäre die \text
 die in der Vorlesung gezeigt werden, in Python-Skripte zu übersetzen. Ziel dabei ist es, 
 die Eleganz der Programme beizubehalten, damit die Studenten die verschiedenen 
 Algorithmen besser verstehen und erlernen können. Auch wenn es in Python teilweise 
-möglich wäre das Problem über einen anderen Weg, eventuell mit weniger Codezeilen, 
+möglich wäre die Problemstellungen über fertige Implementierungen, vermutlich mit weniger Codezeilen, 
 zu lösen, soll dennoch der Hauptfokus auf den Lernprozess in der theoretischen Informatik liegen.
+Die Studenten sollen die Algorithmen verstehen und selber anwenden können.
