--- a/Documentation/warum_python.tex
+++ b/Documentation/warum_python.tex
@@ -2,16 +2,21 @@
 
 Viele Informatik-Kurse oder Vorlesungen für Anfänger benutzen die Programmiersprache Python als erste 
 Programmiersprache. Von den 39 besten Einführungskursen für Informatik in den USA verwendeten im Jahr 2014 
-27 Kurse Python als erste Programmiersprache. ~\cite{Guo14} Mit 69\% ist Python somit, mit einer 
-eindeutigen Mehrheit die meist verwendete Programmiersprache unter diesen Kursen. Einige 
-Internet-Artikel, die die Beliebtheit von heutigen Programmiersprachen beleuchten, referenzieren öfter 
-den Blogbeitrag für die Association for Computing Machinery (ACM). In dem Beitrag wird beschrieben, dass 
-Python Java als häufigste Programmiersprache für Anfänger abgelöst hat. Auch wenn der Artikel bereits 
-2014 veröffentlicht wurde, lässt sich vermuten, dass die Verbreitung von Python nicht zurückgegangen 
+27 Kurse Python als erste Programmiersprache. ~\cite{Guo.07.07.2014} Mit 69\% ist Python somit, mit einer 
+eindeutigen Mehrheit die meist verwendete Programmiersprache unter diesen Kursen. 
+\begin{quotation}
+For the fifth year in row, Python retains it's \#1 dominance followed by Java, C++ and Javascript.
+\end{quotation}\cite{codeeval.}\footnote{(Stand 01.08.2016)} 
+Trotz der sinkenden Beliebtheit von Python auf der Seite code eval, ist Python dennoch seit Jahren die beliebteste 
+Programmiersprache nach ihren Messungen. Ein weiterer Artikel, der Python als sehr beliebte Sprache darstellt und 
+eine große Relevanz für diese Arbeit trägt, da er die Verwendung von Programmiersprachen in Lehrveranstaltungen
+beleuchtet, ist der Blogbeitrag für die Association for Computing Machinery (ACM) von Philip Guo.\footnote{
+\url{http://cacm.acm.org/blogs/blog-cacm/176450-python-is-now-the-most-popular-introductory-teaching-language-at-top-us-universities/fulltext}
+ (Stand 09.05.2016)} In dem Beitrag wird beschrieben, dass Python Java als häufigste Programmiersprache für Anfänger abgelöst hat. 
+Auch wenn der Artikel bereits 2014 veröffentlicht wurde, lässt sich vermuten, dass die Verbreitung von Python nicht zurückgegangen 
 ist. Grund hierfür ist die steigende Beliebtheit der Sprache nach dem TIOBE Index\footnote{
 \url{http://www.tiobe.com/tiobe_index} (Stand 09.05.2016)}, wie auch ein fünfter Platz in der Statistik 
-von Coding Dojo\footnote{
-\url{http://www.codingdojo.com/blog/9-most-in-demand-programming-languages-of-2016/} (Stand 09.05.2016)}.
+von Coding Dojo\footnote{\url{http://www.codingdojo.com/blog/9-most-in-demand-programming-languages-of-2016/} (Stand 09.05.2016)}.
 
 Die Online-Lernplattform Udacity verwendet für den Kurs „Intro to Computer Science“ Python als Sprache, 
 um die Themen der theoretischen Informatik zu erläutern. Diesen Online-Kurs haben bereits über 500.000 
